# ffmpegQt

./: CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
asset/shader/: triangle_mirror.frag  triangle_mirror.vert
asset/video/: testVideo.mov
src/FFmpeg/: FFmpegThread.cpp  FFmpegThread.h  FFmpegUtil.cpp  FFmpegUtil.h
src/ShaderGraph/: FBOItem.cpp  FBOItem.h  FBORender.cpp  FBORender.h
